--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
          <i class="fa-brands fa-instagram"></i>
         </a>
  
-        <a href="#" class="icon" id="twitter">
+        <a href="#https://x.com/AnkitKumar32180?t=0JDSJydhe5zgfBbYxcsdTQ&s=09" class="icon" id="twitter">
          <i class="fa-brands fa-twitter"></i>
         </a>
       </div>
